Fix css spacing on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,7 +8,7 @@
     }
 body {
 	padding: 0;
-	margin: 70px 0 0 0;
+	margin: 90px 0 0 0;
   	color: #493c33;
   	background-color: black;
 	background-size: 1080px;
